# lionagi-qe-fleet

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVPOD_DOCKER_GUIDE.md  LICENSE  README.md  SECURITY.md  TEST_GENERATION_REPORT.md  USAGE_GUIDE.md  coverage.json  docker-compose-test.yml  lionagi.code-workspace  pyproject.toml  pytest.ini  run-integration-tests.sh  verify_integration.py
.claude-flow/metrics/: system-metrics.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: publish.yml  session-api-compatibility.yml  welcome.yml
database/: .env.example  QUICK_START.md  README.md  docker-compose.yml
database/docs/: er_diagram.txt  performance_tuning.md  storage_calculator.md  supabase_deployment.md
database/init/: seed_data.sql
database/migrations/: alembic_migration_qlearning.py
database/schema/: memory_extension.sql  qlearning_schema.sql
docker/: .env.example  .gitignore  DELIVERABLES.md  FILES.md  Makefile  QUICKSTART.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject-qlearning.toml  python-examples.py  validate-setup.sh
docker/pgadmin/: servers.json
docker/postgres/: dev-schema.sql  init.sql
docs/: Q_LEARNING_INTEGRATION.md  coverage-analysis-report.md  frontend-architecture-plan.md  frontend-executive-summary.md  index.md  requirements-validation-report.md
docs/advanced/: claude-code-integration.md  hooks-quick-reference.md  hooks-system.md  index.md  mcp-integration-summary.md  mcp-integration.md  mcp-quickstart.md
docs/agents/: index.md
docs/architecture/: index.md  system-overview.md
docs/guides/: STORAGE_MODES_README.md  advanced-features-migration.md  index.md  migration.md  storage-modes.md
docs/known-issues/: ANTHROPIC_MAX_TOKENS.md
docs/migration/: fleet-to-orchestrator.md
docs/patterns/: index.md
docs/quickstart/: basic-workflows.md  index.md  installation.md  troubleshooting.md  your-first-agent.md
docs/reference/: index.md
docs/reports/: BEFORE_AFTER_COMPARISON.md  DELIVERABLES_SUMMARY.md  DOCKER_SETUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  E2E_TEST_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  HONEST_ASSESSMENT_V1.1.0.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  (+50 more)
examples/: 01_basic_usage.py  02_sequential_pipeline.py  03_parallel_execution.py  04_fan_out_fan_in.py  docker-compose.storage-example.yml  hooks_demo.py  hooks_demo_standalone.py  memory_backends_comparison.py  react_reasoning_demo.py  storage_init.sql  storage_modes_example.py  streaming_usage.py
reports/: coverage_baseline.md
scripts/: coverage_gaps.py  fix-documentation-claims.sh
tests/: conftest.py  test_agentdb_integration.py  test_react_integration.py  test_v102_compatibility.py
tools/: qlearning_inspector.py
(+95 files in other folders)
